Move all Java objects to our own representation